--- a/golang-base/07.运算操作符/运算操作符.md
+++ b/golang-base/07.运算操作符/运算操作符.md
@@ -1,207 +1,227 @@
-# 1.6 常量与枚举
+# 1.7 运算操作符
 
-# 1.6.1 常量
+# 1.7.1 算术运算符
 
-由于常量的值是在编译期确定的，所以常量定义时**必须赋值**，并且不能使用方法的返回值为常量赋值。
-
-常量被定义后，其值不能再被修改。
-
-常量（包括全局常量和局部常量）被定义后可以不使用。
-
-常量的定义方式与变量定义的方式基本相同，只是 var 关键字被更换成了 const：
-
-方式 1：
-
-```go
-const <name> <type> = <value>
-```
-
-方式 2：
-
-```go
-// 某些类型可以直接推导出来，不需要声明
-const <name> = <value>
-```
-
-方式 3：
-
-```go
-const <name3>, <name4>, ... = <value3>, <value4>, ...
-```
-
-方式 4：
-
-```go
-const <name5>, <name6>, ... <type> = <value5>, <value6>, ...
-```
-
-方式 5：
-
-```go
-// 声明多个时，可以用小括号包裹，此模式不限制声明次数
-const (
-  <name1> <type1> = <value1>
-  <name2> = <value2>
-  <name3>, <name4>, ... = <value3>, <value4>, ...
-  <name5>, <name6>, ... <type> = <value5>, <value6>, ...
-)
-```
+go 中，两个整数计算，它们计算之后的结果也还是整数。
 
 代码示例：
 
 ```go
-// 方式1
-const a int = 1
+a, b := 1, 2
+sum := a + b
+sub := a - b
+mul := a * b
+div := a / b
+mod := a % b
 
-// 方式2
-const b = "test"
-
-// 方式3
-const c, d = 2, "hello"
-
-// 方式4
-const e, f bool = true, false
-
-// 方式5
-const (
-    h    byte = 3
-    i         = "value"
-    j, k      = "v", 4
-    l, m      = 5, false
-)
-
-const (
-    n = 6
-)
+fmt.Println(sum, sub, mul, div, mod)
 ```
 
-注：Go 中，**常量只能使用基本数据类型**，即数字、字符串和布尔类型。不能使用复杂的数据结构，比如切片、数组、map、指针和结构体等。如果使用了非基本数据类型，会在编译期报错。
-
-# 1.6.2 枚举
-
-Go 中没有内置枚举类型，所以 Go 中的枚举是使用 const 来定义枚举的。
-
-## 1.6.2.1 定义枚举
-
-枚举的本质就是一系列的常量。所以 Go 中使用 const 定义枚举，比如：
+另外，自增与自减只能以 `<var name>++` 或者 `<var name>--` 的模式声明，并且只能单独存在，不能在自增或自减的同时做加减乘除的计算：
 
 ```go
-const (
-    Male = "Male"
-    Female = "Female"
-)
+a := 1
+// 正确写法
+a++
+a--
+
+// 错误的使用方式
+++a
+--a
+
+// 错误使用方式，不可以自增时计算,也不能赋值
+b := a++ + 1
+c := a--
 ```
 
-除了直接定义值以外，还会使用类型别名，让常量定义的枚举类型的作用显得更直观，比如：
+当不同的数字类型混合计算时，必须先把它们转换成同一类型才可以计算：
 
 ```go
-type Gender string
+a := 10 + 0.1
+    b := byte(1) + 1
+    fmt.Println(a, b)
 
-const (
-   Male   Gender = "Male"
-   Female Gender = "Female"
-)
+    sum := a + float64(b)
+    fmt.Println(sum)
+
+    sub := byte(a) - b
+    fmt.Println(sub)
+
+    mul := a * float64(b)
+    div := int(a) / b
+
+    fmt.Println(mul, div)
 ```
 
-当此枚举作为参数传递时，会使用 Gender 作为参数类型，而不是基础类型 string，比如：
+# 1.7.2 关系运算符
+
+关系运算符结果只会是 bool 类型。
 
 ```go
-func method(gender Gender) {}
+a := 1
+b := 5
+
+fmt.Println(a == b)
+fmt.Println(a != b)
+fmt.Println(a > b)
+fmt.Println(a < b)
+fmt.Println(a >= b)
+fmt.Println(a <= b)
 ```
 
-并且使用了类型别名后，还可以为这个别名类型声明自定义方法：
+# 1.7.3 逻辑运算符
+
+代码示例：
 
 ```go
-func (g *Gender) String() string {
-    switch *g {
-    case Male:
-        return "Male"
-    case Female:
-        return "Female"
-    default:
-        return "Unknown"
-    }
+a := true
+b := false
+
+fmt.Println(a && b)
+fmt.Println(a || b)
+fmt.Println(!(a && b))
+```
+
+# 1.7.4 位运算符
+
+位运算结果：
+
+代码示例：
+
+```go
+fmt.Println(0 & 0)
+fmt.Println(0 | 0)
+fmt.Println(0 ^ 0)
+
+fmt.Println(0 & 1)
+fmt.Println(0 | 1)
+fmt.Println(0 ^ 1)
+
+fmt.Println(1 & 1)
+fmt.Println(1 | 1)
+fmt.Println(1 ^ 1)
+
+fmt.Println(1 & 0)
+fmt.Println(1 | 0)
+fmt.Println(1 ^ 0)
+```
+
+# 1.7.5 赋值运算符
+
+代码示例：
+
+```go
+func main() {
+    a, b := 1, 2
+    var c int
+    c = a + b
+    fmt.Println("c = a + b, c =", c)
+
+    plusAssignment(c, a)
+    subAssignment(c, a)
+    mulAssignment(c, a)
+    divAssignment(c, a)
+    modAssignment(c, a)
+    leftMoveAssignment(c, a)
+    rightMoveAssignment(c, a)
+    andAssignment(c, a)
+    orAssignment(c, a)
+    norAssignment(c, a)
 }
 
-func (g *Gender) IsMale() bool {
-    return *g == Male
+func plusAssignment(c, a int) {
+    c += a // c = c + a
+    fmt.Println("c += a, c =", c)
+}
+
+func subAssignment(c, a int) {
+    c -= a // c = c - a
+    fmt.Println("c -= a, c =", c)
+}
+
+func mulAssignment(c, a int) {
+    c *= a // c = c * a
+    fmt.Println("c *= a, c =", c)
+}
+
+func divAssignment(c, a int) {
+    c /= a // c = c / a
+    fmt.Println("c /= a, c =", c)
+}
+
+func modAssignment(c, a int) {
+    c %= a // c = c % a
+    fmt.Println("c %= a, c =", c)
+}
+
+func leftMoveAssignment(c, a int) {
+    c <<= a // c = c << a
+    fmt.Println("c <<= a, c =", c)
+}
+
+func rightMoveAssignment(c, a int) {
+    c >>= a // c = c >> a
+    fmt.Println("c >>= a, c =", c)
+}
+
+func andAssignment(c, a int) {
+    c &= a // c = c & a
+    fmt.Println("c &= a, c =", c)
+}
+
+func orAssignment(c, a int) {
+    c |= a // c = c | a
+    fmt.Println("c |= a, c =", c)
+}
+
+func norAssignment(c, a int) {
+    c ^= a // c = c ^ a
+    fmt.Println("c ^= a, c =", c)
 }
 ```
 
-## 1.6.2.2 `iota` 关键字
-
-除了上面的别名类型来声明枚举类型以外，还可以使用 iota 关键字，来自动为常量赋值。
-
-在来接 iota 辅助声明枚举之前，先了解一下 iota 关键字的使用。
-
-可以先看看标准库中 iota 的使用：
+# 1.7.6 其他运算符
 
 ```go
-// src/net/http/server.go
-type ConnState int
-const (
-  StateNew ConnState = iota
-  StateActive
-  StateIdle
-  StateHijacked
-  StateClosed
-)
+func main() {
+    a := 4
+    var ptr *int
+    fmt.Println(a)
 
-// src/time/time.go
-type Month int
-const (
-  January Month = 1 + iota
-  February
-  March
-  April
-  May
-  June
-  July
-  August
-  September
-  October
-  November
-  December
-)
+    ptr = &a
+    fmt.Printf("*ptr 为 %d\n", *ptr)
+}
 ```
 
-iota 是一个方便定义常量的关键字。
+# 1.7.7 运算优先级
 
-iota 独立作用于每个 const 定义组，就是上面看到的 `const ( ``// ``code... )` 结构。
-
-并且每个 const 语句算作是一个 const 定义组。
-
-如果 iota 定义在 const 定义组中的第 n 行，那么 iota 的值为 n - 1。所以一定要注意 iota 出现在定义组中的第几行，而不是当前代码中它第几次出现。
+代码示例：
 
 ```go
-const pre int = 1
-const a int = iota
-const (
-    b int = iota
-    c
-    d
-    e
-)
-const (
-    f = 2
-    g = iota
-    h
-    i
-)
+func main() {
+    var a int = 21
+    var b int = 10
+    var c int = 16
+    var d int = 5
+    var e int
+
+    e = (a + b) * c / d // ( 31 * 16 ) / 5
+    fmt.Printf("(a + b) * c / d 的值为 : %d\n", e)
+
+    e = ((a + b) * c) / d // ( 31 * 16 ) / 5
+    fmt.Printf("((a + b) * c) / d 的值为  : %d\n", e)
+
+    e = (a + b) * (c / d) // 31 * (16/5)
+    fmt.Printf("(a + b) * (c / d) 的值为  : %d\n", e)
+
+    // 21 + (160/5)
+    e = a + (b*c)/d
+    fmt.Printf("a + (b * c) / d 的值为  : %d\n", e)
+
+    // 2 & 2 = 2; 2 * 3 = 6; 6 << 1 = 12; 3 + 4 = 7; 7 ^ 3 = 4;4 | 12 = 12
+    f := 3 + 4 ^ 3 | 2&2*3<<1
+    fmt.Println(f == 12)
+}
 ```
 
-使用 iota 关键字就是为了方便我们定义常量的值。
-
-并且当这些枚举值仅作为判断条件使用时，修改非常方便，只需要的其分组增删即可。
-
-注：iota 仅能与 const 关键字配合使用。
-
-示例代码：
-
-```go
-type Gender byte
-const (
-    Male Gender = iota
-    Female
-)
-```
+注：可以使用小括号，提高部分计算的优先级。也可以提高表达式的可读性。
